 - Move MetaTrans::WordbookCz to standalone Perl module distribution.
 - Remove lib directory in dist.
 - Rewrite CVS revision numbers to static numbers.
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Rewrite build system.
 - Rewrite tests to my standard tests.
 - Rewrite to author tests.
 - Rewrite rt to github issues.
 - Update Module::Install to 1.19 version.
 - Update author name.
 - Update copyright years.

1.05 2009-09-03
 [Michal Špaček]
 - fixed bug with procedure calling from Config::General.
 - updated MetaTrans::WordbookCz because of new interface
   of http://www.wordbook.cz/
 - updated MetaTrans::SmsCz because of new interface of http://www.sms.cz/
 - updated MetaTrans::SlovnikCz because of new interface
   of http://www.slovnik.cz/
 - updated MetaTrans::SeznamCz because of new interface
   of http://slovnik.seznam.cz/
 - updated MetaTrans::UltralinguaNet because of new interface
   of http://ultralingua.net/
 - removed some warnings in bin/metatrans
 - added MetaTrans::SlovnikZcuCz for http://slovnik.zcu.cz/

1.04 2005-03-07
 [Jan Pomikálek]
 - updated MetaTrans::WordbookCz because of new interface
   of http://www.wordbook.cz/
 - fixed another bug in MetaTrans::sort_translations function

1.03 2005-01-04
 [Jan Pomikálek]
 - updated MetaTrans::UltralinguaNet because of new interface
   of http://ultralingua.net/
 - fixed a bug in MetaTrans::sort_translations function
 - added cookies support
 - some minor bug-fixes in metatrans

1.02 2004-12-15
 [Jan Pomikálek]
 - fixed a bug, which caused trouble when plugins returned no
   translations for given input expression
 - updated translations sorting algorithm towards better performance
   on input expressions consisting of multiple words

1.01 2004-12-13
 [Jan Pomikálek]
 - the very first release
 - MetaTrans::UltralinguaNet plugin for http://ultralingua.net/
 - MetaTrans::SlovnikCz plugin      for http://www.slovnik.cz/
 - MetaTrans::SeznamCz plugin       for http://slovnik.seznam.cz/