@@ -26,9 +26,9 @@ requires 'HTTP::Response' => 0;
 requires 'LWP::UserAgent' => 0;
 requires 'Proc::SyncExec' => 0;
 requires 'Readonly' => 0;
-resources 'bugtracker' => 'https://github.com/tupinek/MetaTrans/issues';
-resources 'homepage' => 'https://github.com/tupinek/MetaTrans';
-resources 'repository' => 'git://github.com/tupinek/MetaTrans';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/MetaTrans/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/MetaTrans';
+resources 'repository' => 'git://github.com/michal-josef-spacek/MetaTrans';
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
