@@ -26,6 +26,7 @@
  - Rewrite to author tests.
  - Rewrite rt to github issues.
  - Update Module::Install to 1.19 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
